add header images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <title>Job Listings</title>
 </head>
 <body>
-  <!-- Item Start -->
+  <header>
+    <picture>
+      <source media="(min-width: 768px)" srcset="./images/bg-header-desktop.svg">
+      <img src="./images/bg-mobile-desktop.svg" alt="teal background">
+    </picture>
+  </header>
   Photosnap
   New!
   Featured
@@ -16,15 +21,15 @@
   1d ago
   Full Time
   USA only
-  <!-- Role -->
+ 
   Frontend
-  <!-- Level -->
+  
   Senior
-  <!-- Languages -->
+ 
   HTML
   CSS
   JavaScript
-  <!-- Item End -->
+ 
 
   <!-- Item Start -->
   Manage
