linked css file

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
   <title>Job Listings</title>
 </head>
 <body>
   <header>
     <picture>
       <source media="(min-width: 768px)" srcset="./images/bg-header-desktop.svg">
-      <img src="./images/bg-mobile-desktop.svg" alt="teal background">
+      <img src="./images/bg-header-mobile.svg" alt="teal background">
     </picture>
   </header>
   Photosnap
