add min height to main tag, borderleft on new job postings

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    
     <div class="listings">
 
-      <div class="job">
+      <div class="job borderLeft">
         Photosnap
         New!
         Featured
@@ -46,7 +46,7 @@
         JavaScript
       </div>
 
-      <div class="job">
+      <div class="job borderLeft">
         Manage
         New!
         Featured
