padding adjustments, div structuring in each job posting

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     <div class="listings">
 
       <div class="job borderLeft">
-        Photosnap
-        New!
-        Featured
+        <div class="company">
+          Photosnap
+          New!
+          Featured
+        </div>
         Senior Frontend Developer
         1d ago
         Full Time
@@ -45,9 +47,11 @@
       </div>
 
       <div class="job borderLeft">
-        Manage
-        New!
-        Featured
+        <div class="company">
+          Manage
+          New!
+          Featured
+        </div>
         Fullstack Developer
         1d ago
         Part Time
@@ -60,8 +64,10 @@
       </div>
 
       <div class="job">
-        Account
-        New!
+        <div class="company">
+          Account
+          New!
+        </div>
         Junior Frontend Developer
         2d ago
         Part Time
@@ -75,7 +81,9 @@
       </div>
 
       <div class="job">
-        MyHome
+        <div class="company">
+          MyHome
+        </div>
         Junior Frontend Developer
         5d ago
         Contract
@@ -86,9 +94,11 @@
         CSS
         JavaScript
      </div>
-     
+
      <div class="job">
-      Loop Studios
+      <div class="company">
+        Loop Studios
+      </div>
       Software Engineer
       1w ago
       Full Time
@@ -101,74 +111,84 @@
       Sass
     </div>
 
-      <div class="job">
+    <div class="job">
+      <div class="company">
         FaceIt
-        Junior Backend Developer
-        2w ago
-        Full Time
-        UK only
-        <hr>
-        Backend
-        Junior 
-        Ruby 
-        RoR
       </div>
+      Junior Backend Developer
+      2w ago
+      Full Time
+      UK only
+      <hr>
+      Backend
+      Junior 
+      Ruby 
+      RoR
+    </div>
 
-      <div class="job">
+    <div class="job">
+      <div class="company">
         Shortly
-        Junior Developer
-        2w ago
-        Full Time
-        Worldwide
-        <hr>
-        Frontend
-        Junior
-        HTML
-        JavaScript
-        Sass
       </div>
+      Junior Developer
+      2w ago
+      Full Time
+      Worldwide
+      <hr>
+      Frontend
+      Junior
+      HTML
+      JavaScript
+      Sass
+    </div>
 
-      <div class="job">
+    <div class="job">
+      <div class="company">
         Insure
-        Junior Frontend Developer
-        2w ago
-        Full Time
-        USA only
-        <hr>
-        Frontend   
-        Junior  
-        JavaScript
-        Vue
-        Sass
       </div>
+      Junior Frontend Developer
+      2w ago
+      Full Time
+      USA only
+      <hr>
+      Frontend   
+      Junior  
+      JavaScript
+      Vue
+      Sass
+    </div>
       
-      <div class="job">
+    <div class="job">
+      <div class="company">
         Eyecam Co.
-        Full Stack Engineer
-        3w ago
-        Full Time
-        Worldwide
-        <hr>
-        Fullstack
-        Midweight
-        JavaScript
-        Python
-        Django
       </div>
+      Full Stack Engineer
+      3w ago
+      Full Time
+      Worldwide
+      <hr>
+      Fullstack
+      Midweight
+      JavaScript
+      Python
+      Django
+    </div>
 
-      <div class="job">
+    <div class="job">
+      <div class="company">
         The Air Filter Company
-        Front-end Dev
-        1mo ago
-        Part Time
-        Worldwide
-        <hr>
-        Frontend
-        Junior
-        JavaScript
-        React
-        Sass
       </div>
+      Front-end Dev
+      1mo ago
+      Part Time
+      Worldwide
+      <hr>
+      Frontend
+      Junior
+      JavaScript
+      React
+      Sass
+    </div>
   </div>
 </main>
  
