add logo images to each job, absolute positioned it to top of container

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div class="listings">
 
       <div class="job borderLeft">
+        <img src="./images/photosnap.svg" alt="" >
         <div class="company">
           Photosnap
           New!
@@ -47,6 +48,7 @@
       </div>
 
       <div class="job borderLeft">
+        <img src="./images/manage.svg" alt="">
         <div class="company">
           Manage
           New!
@@ -64,6 +66,7 @@
       </div>
 
       <div class="job">
+        <img src="./images/account.svg" alt="">
         <div class="company">
           Account
           New!
@@ -81,6 +84,7 @@
       </div>
 
       <div class="job">
+        <img src="./images/myhome.svg" alt="">
         <div class="company">
           MyHome
         </div>
@@ -96,6 +100,7 @@
      </div>
 
      <div class="job">
+      <img src="./images/loop-studios.svg" alt="">
       <div class="company">
         Loop Studios
       </div>
@@ -112,6 +117,7 @@
     </div>
 
     <div class="job">
+      <img src="./images/faceit.svg" alt="">
       <div class="company">
         FaceIt
       </div>
@@ -127,6 +133,7 @@
     </div>
 
     <div class="job">
+      <img src="./images/shortly.svg" alt="">
       <div class="company">
         Shortly
       </div>
@@ -143,6 +150,7 @@
     </div>
 
     <div class="job">
+      <img src="./images/insure.svg" alt="">
       <div class="company">
         Insure
       </div>
@@ -159,6 +167,7 @@
     </div>
       
     <div class="job">
+      <img src="./images/eyecam-co.svg" alt="">
       <div class="company">
         Eyecam Co.
       </div>
@@ -175,6 +184,7 @@
     </div>
 
     <div class="job">
+      <img src="./images/the-air-filter-company.svg" alt="">
       <div class="company">
         The Air Filter Company
       </div>
