--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
         Full Time
         USA only
         <hr>
-        Frontend
-        Senior
-        HTML
-        CSS
-        JavaScript
+        <div class="job-tags">
+          Frontend
+          Senior
+          HTML
+          CSS
+          JavaScript
+        </div>
       </div>
 
       <div class="job borderLeft">
@@ -59,10 +61,12 @@
         Part Time
         Remote
         <hr>
-        Fullstack
-        Midweight
-        Python
-        React
+        <div class="job-tags">
+          Fullstack
+          Midweight
+          Python
+          React
+        </div>
       </div>
 
       <div class="job">
@@ -76,11 +80,13 @@
         Part Time
         USA only
         <hr>
-        Frontend
-        Junior
-        JavaScript
-        React
-        Sass
+        <div class="job-tags">
+          Frontend
+          Junior
+          JavaScript
+          React
+          Sass
+        </div>
       </div>
 
       <div class="job">
@@ -93,11 +99,13 @@
         Contract
         USA only
         <hr>
-        Front-end
-        Junior 
-        CSS
-        JavaScript
-     </div>
+        <div class="job-tags">
+          Front-end
+          Junior 
+          CSS
+          JavaScript
+        </div>
+      </div>
 
      <div class="job">
       <img src="./images/loop-studios.svg" alt="">
@@ -109,12 +117,14 @@
       Full Time
       Worldwide
       <hr>
-      Fullstack
-      Midweight
-      JavaScript
-      Ruby  
-      Sass
-    </div>
+        <div class="job-tags">
+          Fullstack
+          Midweight
+          JavaScript
+          Ruby  
+          Sass
+        </div>
+      </div>
 
     <div class="job">
       <img src="./images/faceit.svg" alt="">
@@ -126,10 +136,12 @@
       Full Time
       UK only
       <hr>
-      Backend
-      Junior 
-      Ruby 
-      RoR
+      <div class="job-tags">
+        Backend
+        Junior 
+        Ruby 
+        RoR
+      </div>
     </div>
 
     <div class="job">
@@ -142,11 +154,13 @@
       Full Time
       Worldwide
       <hr>
-      Frontend
-      Junior
-      HTML
-      JavaScript
-      Sass
+      <div class="job-tags">
+        Frontend
+        Junior
+        HTML
+        JavaScript
+        Sass
+      </div>
     </div>
 
     <div class="job">
@@ -159,11 +173,13 @@
       Full Time
       USA only
       <hr>
-      Frontend   
-      Junior  
-      JavaScript
-      Vue
-      Sass
+      <div class="job-tags">
+        Frontend   
+        Junior  
+        JavaScript
+        Vue
+        Sass
+      </div>
     </div>
       
     <div class="job">
@@ -176,11 +192,13 @@
       Full Time
       Worldwide
       <hr>
-      Fullstack
-      Midweight
-      JavaScript
-      Python
-      Django
+      <div class="job-tags">
+        Fullstack
+        Midweight
+        JavaScript
+        Python
+        Django
+      </div>
     </div>
 
     <div class="job">
@@ -193,14 +211,16 @@
       Part Time
       Worldwide
       <hr>
-      Frontend
-      Junior
-      JavaScript
-      React
-      Sass
+      <div class="job-tags">
+        Frontend
+        Junior
+        JavaScript
+        React
+        Sass
+      </div>
     </div>
   </div>
-</main>
+  </main>
  
 </body>
 </html>
