padding adjustments, h4 to job title

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div class="leftContent-job">
           <img src="./images/photosnap.svg" alt="" >
           <div class="company">
-            Photosnap
-            New!
-            Featured
+            <h4>Photosnap</h4>
+            <span>New!</span>
+            <span> Featured</span>
           </div>
 
           <div class="title">
@@ -42,9 +42,9 @@
             Full Time
             USA only
           </div>
-      </div>
+        </div>
           
-      <hr>
+        <hr>
 
         <div class="job-tags">
           Frontend
@@ -59,9 +59,9 @@
         <img src="./images/manage.svg" alt="">
         <div class="leftContent-job">
           <div class="company">
-            Manage
-            New!
-            Featured
+            <h4>Manage</h4>
+            <span>New!</span>
+            <span>Featured</span>
           </div>
 
           <div class="title">
@@ -86,8 +86,8 @@
         <img src="./images/account.svg" alt="">
         <div class="leftContent-job">
           <div class="company">
-            Account
-            New!
+            <h4>Account</h4>
+            <span>New!</span>
           </div>
 
           <div class="title">
@@ -113,7 +113,7 @@
         <img src="./images/myhome.svg" alt=""> 
         <div class="leftContent-job">
           <div class="company">
-            MyHome
+            <h4>MyHome</h4>
           </div>
 
           <div class="title">
@@ -138,7 +138,7 @@
         <img src="./images/loop-studios.svg" alt="">
         <div class="leftContent-job">
           <div class="company">
-            Loop Studios
+            <h4>Loop Studios</h4>
           </div>
 
           <div class="title">
@@ -164,7 +164,7 @@
         <img src="./images/faceit.svg" alt="">
         <div class="leftContent-job">
           <div class="company">
-            FaceIt
+            <h4>FaceIt</h4>
           </div>
           <div class="title">
             Junior Backend Developer
@@ -188,7 +188,7 @@
         <img src="./images/shortly.svg" alt="">
         <div class="leftContent-job">
           <div class="company">
-            Shortly
+            <h4>>Shortly</h4>
           </div>
           <div class="title">
             Junior Developer
@@ -213,7 +213,7 @@
         <img src="./images/insure.svg" alt="">
         <div class="leftContent-job">
           <div class="company">
-            Insure
+            <h4>Insure</h4>
           </div>
           <div class="title">
             Junior Frontend Developer
@@ -238,7 +238,7 @@
         <img src="./images/eyecam-co.svg" alt="">
         <div class="leftContent-job">
           <div class="company">
-            Eyecam Co.
+            <h4>Eyecam Co.</h4>
           </div>
           <div class="title">
             Full Stack Engineer
@@ -263,7 +263,7 @@
         <img src="./images/the-air-filter-company.svg" alt="">
         <div class="leftContent-job">
           <div class="company">
-            The Air Filter Company
+            <h4>The Air Filter Company</h4>
           </div>
           <div class="title">
             Front-end Dev
