--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <img src="./images/photosnap.svg" alt="" >
           <div class="company">
             <h4>Photosnap</h4>
-            <span>New!</span>
-            <span> Featured</span>
+            <span class="new">NEW!</span>
+            <span>Featured</span>
           </div>
 
           <div class="title">
@@ -60,7 +60,7 @@
         <div class="leftContent-job">
           <div class="company">
             <h4>Manage</h4>
-            <span>New!</span>
+            <span class="new">NEW!</span>
             <span>Featured</span>
           </div>
 
@@ -87,7 +87,7 @@
         <div class="leftContent-job">
           <div class="company">
             <h4>Account</h4>
-            <span>New!</span>
+            <span class="new">NEW!</span>
           </div>
 
           <div class="title">
