styled featured posts

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="company">
             <h4>Photosnap</h4>
             <span class="new">NEW!</span>
-            <span>Featured</span>
+            <span class="featured">Featured</span>
           </div>
 
           <div class="title">
@@ -61,7 +61,7 @@
           <div class="company">
             <h4>Manage</h4>
             <span class="new">NEW!</span>
-            <span>Featured</span>
+            <span class="featured">Featured</span>
           </div>
 
           <div class="title">
