--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <img src="./images/photosnap.svg" alt="" >
           <div class="company">
             <h4>Photosnap</h4>
-            <span class="new">NEW!</span>
-            <span class="featured">Featured</span>
+            <small><span class="new">NEW!</span></small>
+            <small><span class="featured">FEATURED</span></small>
           </div>
 
           <div class="title">
@@ -60,8 +60,8 @@
         <div class="leftContent-job">
           <div class="company">
             <h4>Manage</h4>
-            <span class="new">NEW!</span>
-            <span class="featured">Featured</span>
+            <small><span class="new">NEW!</span></small>
+            <small><span class="featured">FEATURED</span></small>
           </div>
 
           <div class="title">
@@ -87,7 +87,7 @@
         <div class="leftContent-job">
           <div class="company">
             <h4>Account</h4>
-            <span class="new">NEW!</span>
+            <small><span class="new">NEW!</span></small>
           </div>
 
           <div class="title">
