add b tag to all job titles

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
 
           <div class="title">
-            Senior Frontend Developer
+            <p><b>Senior Frontend Developer</b></p>
             1d ago
             Full Time
             USA only
@@ -65,7 +65,7 @@
           </div>
 
           <div class="title">
-            Fullstack Developer
+            <p><b>Fullstack Developer</b></p>
             1d ago
             Part Time
             Remote
@@ -91,7 +91,7 @@
           </div>
 
           <div class="title">
-            Junior Frontend Developer
+            <p><b>Junior Frontend Developer</b></p>
             2d ago
             Part Time
             USA only
@@ -117,7 +117,7 @@
           </div>
 
           <div class="title">
-            Junior Frontend Developer
+            <p><b>Junior Frontend Developer</b></p>
             5d ago
             Contract
             USA only
@@ -142,7 +142,7 @@
           </div>
 
           <div class="title">
-            Software Engineer
+            <p><b>Software Engineer</b></p>
             1w ago
             Full Time
             Worldwide
@@ -167,7 +167,7 @@
             <h4>FaceIt</h4>
           </div>
           <div class="title">
-            Junior Backend Developer
+            <p><b>Junior Backend Developer</b></p>
             2w ago
             Full Time
             UK only
@@ -191,7 +191,7 @@
             <h4>>Shortly</h4>
           </div>
           <div class="title">
-            Junior Developer
+            <p><b>Junior Developer</b></p>
             2w ago
             Full Time
             Worldwide
@@ -216,7 +216,7 @@
             <h4>Insure</h4>
           </div>
           <div class="title">
-            Junior Frontend Developer
+            <p><b>Junior Frontend Developer</b></p>
             2w ago
             Full Time
             USA only
@@ -241,7 +241,7 @@
             <h4>Eyecam Co.</h4>
           </div>
           <div class="title">
-            Full Stack Engineer
+            <p><b>Full Stack Engineer</b></p>
             3w ago
             Full Time
             Worldwide
@@ -266,7 +266,7 @@
             <h4>The Air Filter Company</h4>
           </div>
           <div class="title">
-            Front-end Dev
+            <p><b>Front-end Dev</b></p>
             1mo ago
             Part Time
             Worldwide
