title details styled

--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
 
           <div class="title">
             <p><b>Senior Frontend Developer</b></p>
-            1d ago
-            Full Time
-            USA only
+            <div class="title-details"> 
+              <span>1d ago</span>
+              <span class="dot"></span>
+              <span>Full Time</span>
+              <span class="dot"></span>
+              <span>USA only</span>
+            </div>
           </div>
         </div>
           
