changed layout on  desktop pov

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="listings">
       
       <div class="job borderLeft">
+        <img src="./images/photosnap.svg" alt="" >
         <div class="leftContent-job">
-          <img src="./images/photosnap.svg" alt="" >
           <div class="company">
             <h4>Photosnap</h4>
             <small><span class="new">NEW!</span></small>
@@ -70,9 +70,13 @@
 
           <div class="title">
             <p><b>Fullstack Developer</b></p>
-            1d ago
-            Part Time
-            Remote
+            <div class="title-details"> 
+              <span>1d ago</span>
+              <span class="dot"></span>
+              <span>Part Time</span>
+              <span class="dot"></span>
+              <span>Remote</span>
+            </div>
           </div>
         </div>
 
@@ -96,9 +100,13 @@
 
           <div class="title">
             <p><b>Junior Frontend Developer</b></p>
-            2d ago
-            Part Time
-            USA only
+            <div class="title-details"> 
+              <span>2d ago</span>
+              <span class="dot"></span>
+              <span>Part Time</span>
+              <span class="dot"></span>
+              <span>USA only</span>
+            </div>
           </div>
         </div>
 
@@ -122,9 +130,13 @@
 
           <div class="title">
             <p><b>Junior Frontend Developer</b></p>
-            5d ago
-            Contract
-            USA only
+            <div class="title-details"> 
+              <span>5d ago</span>
+              <span class="dot"></span>
+              <span>Contract</span>
+              <span class="dot"></span>
+              <span>USA only</span>
+            </div>
           </div>
         </div>
 
@@ -147,9 +159,13 @@
 
           <div class="title">
             <p><b>Software Engineer</b></p>
-            1w ago
-            Full Time
-            Worldwide
+            <div class="title-details"> 
+              <span>1w ago</span>
+              <span class="dot"></span>
+              <span>Full Time</span>
+              <span class="dot"></span>
+              <span>Worldwide</span>
+            </div>
           </div>
         </div>
 
@@ -172,9 +188,13 @@
           </div>
           <div class="title">
             <p><b>Junior Backend Developer</b></p>
-            2w ago
-            Full Time
-            UK only
+            <div class="title-details"> 
+              <span>2w ago</span>
+              <span class="dot"></span>
+              <span>Full Time</span>
+              <span class="dot"></span>
+              <span>UK only</span>
+            </div>
           </div>
         </div>
 
@@ -192,13 +212,17 @@
         <img src="./images/shortly.svg" alt="">
         <div class="leftContent-job">
           <div class="company">
-            <h4>>Shortly</h4>
+            <h4>Shortly</h4>
           </div>
           <div class="title">
             <p><b>Junior Developer</b></p>
-            2w ago
-            Full Time
-            Worldwide
+            <div class="title-details"> 
+              <span>2w ago</span>
+              <span class="dot"></span>
+              <span>Full Time</span>
+              <span class="dot"></span>
+              <span>Worldwide</span>
+            </div>
           </div>
         </div>
 
@@ -221,9 +245,13 @@
           </div>
           <div class="title">
             <p><b>Junior Frontend Developer</b></p>
-            2w ago
-            Full Time
-            USA only
+            <div class="title-details"> 
+              <span>2w ago</span>
+              <span class="dot"></span>
+              <span>Full Time</span>
+              <span class="dot"></span>
+              <span>USA only</span>
+            </div>
           </div>
         </div>
 
@@ -246,9 +274,13 @@
           </div>
           <div class="title">
             <p><b>Full Stack Engineer</b></p>
-            3w ago
-            Full Time
-            Worldwide
+            <div class="title-details"> 
+              <span>3w ago</span>
+              <span class="dot"></span>
+              <span>Full Time</span>
+              <span class="dot"></span>
+              <span>Worldwide</span>
+            </div>
           </div>
         </div>
 
@@ -271,9 +303,13 @@
           </div>
           <div class="title">
             <p><b>Front-end Dev</b></p>
-            1mo ago
-            Part Time
-            Worldwide
+            <div class="title-details"> 
+              <span>1mo ago</span>
+              <span class="dot"></span>
+              <span>Part Time</span>
+              <span class="dot"></span>
+              <span>Worldwide</span>
+            </div>
           </div>
         </div>
 
