--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     </picture>
 
     <div class="tags">
+      
+      <div class="tag">
+        <span value="frontend">Frontend</span>
+        <button value="frontend"><img src="./images/icon-remove.svg" alt="x icon"></button>
+      </div>
+
       <button class="clearButton">Clear</button>
     </div>
   </header>
