rename css class, add update listings function - in progress

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="./images/bg-header-mobile.svg" alt="teal background">
     </picture>
 
-    <div class="tags">
+    <div class="chosen-tags">
       
       <div class="tag">
         <span value="frontend">Frontend</span>
