commented out code, add new tags with hover state on btns

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         <span value="frontend">Frontend</span>
         <button value="frontend"><img src="./images/icon-remove.svg" alt="x icon"></button>
       </div>
+      <div class="tag">
+        <span value="css">CSS</span>
+        <button value="css"><img src="./images/icon-remove.svg" alt="x icon"></button>
+      </div>
+      <div class="tag">
+        <span value="JavaScript">JavaScript</span>
+        <button value="JavaScript"><img src="./images/icon-remove.svg" alt="x icon"></button>
+      </div>
 
       <button class="clearButton">Clear</button>
     </div>
