appending job tags to filter bar

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
     <ul class="chosen-tags">
       
       <li class="chosen-tag">
-        <!-- <span value="frontend">Frontend</span> -->
-        Frontend
+        <span value="frontend">Frontend</span>
+        <!-- Frontend -->
         <button value="frontend"><img src="./images/icon-remove.svg" alt="x icon"></button>
       </li>
       <li class="chosen-tag">
-        <!-- <span value="css">CSS</span> -->
-        CSS
+        <span value="css">CSS</span>
+        <!-- CSS -->
         <button value="css"><img src="./images/icon-remove.svg" alt="x icon"></button>
       </li>
       <li class="chosen-tag">
-        <!-- <span value="JavaScript">JavaScript</span> -->
-        JavaScript
+        <span value="JavaScript">JavaScript</span>
+        <!-- JavaScript -->
         <button value="JavaScript"><img src="./images/icon-remove.svg" alt="x icon"></button>
       </li>
 
