utilized ul tag, now appending to list correctly

--- a/index.html
+++ b/index.html
@@ -19,26 +19,27 @@
       <img src="./images/bg-header-mobile.svg" alt="teal background">
     </picture>
 
-    <ul class="chosen-tags">
-      
-      <li class="chosen-tag">
-        <span value="frontend">Frontend</span>
-        <!-- Frontend -->
-        <button value="frontend"><img src="./images/icon-remove.svg" alt="x icon"></button>
-      </li>
-      <li class="chosen-tag">
-        <span value="css">CSS</span>
-        <!-- CSS -->
-        <button value="css"><img src="./images/icon-remove.svg" alt="x icon"></button>
-      </li>
-      <li class="chosen-tag">
-        <span value="JavaScript">JavaScript</span>
-        <!-- JavaScript -->
-        <button value="JavaScript"><img src="./images/icon-remove.svg" alt="x icon"></button>
-      </li>
+    <div class="chosen-tags">
+      <ul class="list">
+        <li class="chosen-tag">
+          <span value="frontend">Frontend</span>
+          <!-- Frontend -->
+          <button value="frontend"><img src="./images/icon-remove.svg" alt="x icon"></button>
+        </li>
+        <li class="chosen-tag">
+          <span value="css">CSS</span>
+          <!-- CSS -->
+          <button value="css"><img src="./images/icon-remove.svg" alt="x icon"></button>
+        </li>
+        <li class="chosen-tag">
+          <span value="JavaScript">JavaScript</span>
+          <!-- JavaScript -->
+          <button value="JavaScript"><img src="./images/icon-remove.svg" alt="x icon"></button>
+        </li>
+      </ul>
 
       <button class="clearButton">Clear</button>
-    </ul>
+    </div>
   </header>
 
   <main>
