working on deleting from filter bar

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         <li class="chosen-tag">
           <span value="frontend">Frontend</span>
           <!-- Frontend -->
-          <button value="frontend"><img src="./images/icon-remove.svg" alt="x icon"></button>
+          <button value="frontend"><img class="delete" src="./images/icon-remove.svg" alt="x icon"></button>
         </li>
         <li class="chosen-tag">
           <span value="css">CSS</span>
           <!-- CSS -->
-          <button value="css"><img src="./images/icon-remove.svg" alt="x icon"></button>
+          <button value="css"><img class="delete" src="./images/icon-remove.svg" alt="x icon"></button>
         </li>
         <li class="chosen-tag">
           <span value="JavaScript">JavaScript</span>
           <!-- JavaScript -->
-          <button value="JavaScript"><img src="./images/icon-remove.svg" alt="x icon"></button>
+          <button value="JavaScript"><img class="delete" src="./images/icon-remove.svg" alt="x icon"></button>
         </li>
       </ul>
 
