remove dummy values in html, display filter bar only when clicking on tag

--- a/index.html
+++ b/index.html
@@ -19,23 +19,8 @@
       <img src="./images/bg-header-mobile.svg" alt="teal background">
     </picture>
 
-    <div class="chosen-tags">
+    <div class="chosen-tags hidden">
       <ul class="list">
-        <li class="chosen-tag">
-          <span value="frontend">Frontend</span>
-          <!-- Frontend -->
-          <button value="frontend"><img class="delete" src="./images/icon-remove.svg" alt="x icon"></button>
-        </li>
-        <li class="chosen-tag">
-          <span value="css">CSS</span>
-          <!-- CSS -->
-          <button value="css"><img class="delete" src="./images/icon-remove.svg" alt="x icon"></button>
-        </li>
-        <li class="chosen-tag">
-          <span value="JavaScript">JavaScript</span>
-          <!-- JavaScript -->
-          <button value="JavaScript"><img class="delete" src="./images/icon-remove.svg" alt="x icon"></button>
-        </li>
       </ul>
 
       <button class="clearButton">Clear</button>
