changed bg color of image, removed function call, clearer comments

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <picture>
       <source media="(min-width: 768px)" srcset="./images/bg-header-desktop.svg">
-      <img src="./images/bg-header-mobile.svg" alt="teal background">
+      <img class="bg-shape" src="./images/bg-header-mobile.svg" alt="teal background">
     </picture>
 
     <div class="chosen-tags hidden">
