used try catch in fetchData function, filtering through jobListings function

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <hr>
 
         <div class="job-tags">
-          <button class="tag">Front-end</button>
+          <button class="tag">Frontend</button>
           <button class="tag">Junior</button>
           <button class="tag">CSS</button>
           <button class="tag">JavaScript</button>
@@ -305,7 +305,7 @@
             <h4>The Air Filter Company</h4>
           </div>
           <div class="title">
-            <p><b>Front-end Dev</b></p>
+            <p><b>Frontend Dev</b></p>
             <div class="title-details"> 
               <span>1mo ago</span>
               <span class="dot"></span>
